# pylibcdr

./: README.md  setup.py
pylibcdr/: CMakeLists.txt
pylibcdr/cmake/: Findlibcdr.cmake  Findlibrevenge.cmake
pylibcdr/core/: parser.cxx
